--- a/css/styles.css
+++ b/css/styles.css
@@ -216,9 +216,14 @@ nav > ul > li > a:active {
 
 #hero {
   background-color: white;
+  text-align: center;
   padding: 20px 0;
   display: inline-block;
   width: 100%;
+}
+
+#hero span {
+  display: block;
 }
 
 main {
@@ -236,4 +241,32 @@ main {
   border-bottom: 1.5px solid rgba(77, 77, 77, 0.3);
   text-align: center;
   background-color: #f5f5f5;
+}
+
+/* Medium devices (640px and larger) */
+
+@media only screen and (min-width: 640px) {
+  header {
+    text-align: unset;
+  }
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 23px;
+  }
+  main {
+    padding-top: 132px;
+  }
+}
+
+/* Large devices 1024px or larger) */
+
+@media only screen and (min-width: 1024px) {
+    
+}
+
+/* X-large devices (1440px or larger) */
+
+@media only screen and (min-width: 1440px) {
+    
 }
