--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ a:active {
   padding: 10px;
   border-radius: 5px;
   box-shadow: 2px 2px 8px rgba(77, 77, 77, 0.25);
-  transition: 0.2s opacity;
+  transition: 0.2s;
 }
 
 .button:hover {
@@ -137,6 +137,9 @@ header.index {
 }
 
 /* Layout styling */
+.skills {
+  display: flex;
+}
 
 .container {
   padding: 0 15px;
@@ -243,6 +246,12 @@ main {
   background-color: #f5f5f5;
 }
 
+#about h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+
 /* Medium devices (640px and larger) */
 
 @media only screen and (min-width: 640px) {
@@ -257,16 +266,115 @@ main {
   main {
     padding-top: 132px;
   }
+.col-md-6 {
+  width: 50%;
+}
+[class*="col-"] {
+  float: left;
+  padding: 10px;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+#about h3 {
+  margin-top: 0;
+}
+
+}
+.cv-button {
+  text-align: center;
 }
 
 /* Large devices 1024px or larger) */
 
+
+
 @media only screen and (min-width: 1024px) {
-    
+  .skills {
+    flex-direction: column;
+  }
+  .col-lg-5 h2,
+  .col-lg-7 h2 {
+    text-align: left;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .cv-button {
+    text-align: left;
+  }
 }
 
 /* X-large devices (1440px or larger) */
 
 @media only screen and (min-width: 1440px) {
     
+}
+
+@keyframes color-change {
+  0% {fill: #edc655;}
+  50% {fill: #fcffad;}
+  100% {fill: #f76414;}
+}
+.sun {
+  animation: 4s color-change infinite alternate linear;
+}
+@keyframes cloud-move {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+.cloud-front {
+  animation: 30s cloud-move infinite alternate linear;
+}
+@keyframes cloud-move-reverse {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(100px,48px);}
+}
+.cloud-back {
+  animation: 30s cloud-move-reverse infinite alternate linear;
+}
+
+.navigation a {
+  position: relative;
+  display: inline-block;
+  line-height: 0.25px;
+  text-decoration: none; 
+}
+
+.navigation a:before,
+.navigation a:after {
+  content: '';
+  position: absolute;
+  opacity: 0;
+  font-size: 20px;
+  top: 0;
+  transition: all 0.3s;
+}
+
+.navigation a:before {
+  content: '(';
+  left: 0;
+  transform: translateX(10px);
+}
+
+.navigation a:after {
+  content: ')';
+  right: 0;
+  transform: translateX(-10px);
+}
+
+.navigation a:hover:before,
+.navigation a:hover:after {
+  opacity: 1;
+  transform: translateX(0);
 }
