--- a/css/styles.css
+++ b/css/styles.css
@@ -68,12 +68,12 @@ a:visited {
 
 a:hover,
 a:focus {
-  color: #ed5757;
+  color: rgb(137, 137, 137);
   text-decoration: underline;
 }
 
 a:active {
-  color: #994c30;
+  color: rgba(102, 173, 184, 0.7);
 }
 
 .button {
@@ -128,8 +128,7 @@ a:active {
 
 header {
   background-color: #f5f5f5;
-  text-align: center;
-  padding: 10px 0;
+  padding: 10px 0 4px;
   box-shadow: 5px 5px 11px rgba(0, 0, 0, 0.15);
   -webkit-box-shadow: 5px 5px 11px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 5px 5px 11px rgba(0, 0, 0, 0.15);
@@ -185,18 +184,10 @@ header.index {
   max-width: 345px;
 }
 
-nav {
-  display: inline-block;
-  width: 100%;
-}
-
 nav > ul {
   list-style-type: none;
   padding: 0;
-}
-
-nav > ul > li {
-  display: inline-block;
+  margin: 0;
 }
 
 nav > ul > li > a {
@@ -240,7 +231,7 @@ nav > ul > li > a:active {
 }
 
 main {
-  padding-top: 190px;
+  padding-top: 125.75px;
 }
 
 #contact {
@@ -344,11 +335,35 @@ div > div > a.step:active {
   color: rgba(77, 77, 77, 0.8);
 }
 
+.navtoggle li:not(:last-child) {
+  display: none;
+}
+.navtoggle, .navtoggle.responsive {
+  position: relative;
+}
+.navtoggle li .icon {
+  position: absolute;
+  right: 0;
+  top: 40px;
+  font-size: 20px;
+  padding-right: 0;
+}
 
+.navtoggle.responsive nav {
+  padding: 24px 0 0;
+}
 
+.navtoggle.responsive li {
+  display: block;
+  padding: 10px 0;
+  border-top: 1px solid rgb(175, 175, 175,0.);
+}
+.navtoggle.responsive li:last-child {
+  padding: 0 0 10px;
+}
 /* Medium devices (640px and larger) */
 
-@media only screen and (min-width: 640px) {
+@media only screen and (min-width: 641px) {
   header {
     text-align: unset;
   }
@@ -356,6 +371,18 @@ div > div > a.step:active {
     width: auto;
     float: right;
     margin-top: 23px;
+  }
+  nav > ul {
+    margin: 1em 0;
+  }
+  nav > ul > li {
+    display: inline-block;
+  }
+  .navtoggle li:not(:last-child) {
+    display: inline-block;
+  }
+  .navtoggle li:last-child {
+    display: none;
   }
   main {
     padding-top: 132px;
@@ -559,3 +586,13 @@ div > div > a.step:active {
   transform: translateX(0);
 }
 
+.navigation a.icon:before,
+.navigation a.icon:after {
+  content: none;
+}
+
+.navigation a.icon:hover:before,
+.navigation a.icon:hover:after {
+  opacity: 0;
+  transform: none;
+}
