--- a/css/styles.css
+++ b/css/styles.css
@@ -79,8 +79,8 @@ a:active {
 .button {
   display: inline-block;
   background-color: rgba(102, 173, 184, 0.7);
-  color: #4d4d4d;
-  -webkit-text-fill-color: #4d4d4d;
+  color: #393939;
+  -webkit-text-fill-color: #393939;
   font-size: 1em;
   font-weight: 500;
   text-decoration: none;
@@ -92,13 +92,13 @@ a:active {
 
 .button:hover {
   background-color: rgba(102, 173, 184, 0.6);
-  color: #4d4d4d;
+  color: #393939;
   text-decoration: none;
 }
 
 .button:active {
   background-color: rgba(102, 173, 184, 0.6);
-  color: #4d4d4d;
+  color: #393939;
   text-decoration: none;
 }
 
@@ -134,6 +134,7 @@ header {
   -moz-box-shadow: 5px 5px 11px rgba(0, 0, 0, 0.15);
   position: fixed;
   width: 100%;
+  z-index: 1000;
 }
 
 header.index {
@@ -273,7 +274,6 @@ main {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: top;
 }
 
 .step {
@@ -356,7 +356,7 @@ div > div > a.step:active {
 .navtoggle.responsive li {
   display: block;
   padding: 10px 0;
-  border-top: 1px solid rgb(175, 175, 175,0.);
+  border-top: 1px solid rgb(175, 175, 175, 0);
 }
 .navtoggle.responsive li:last-child {
   padding: 0 0 10px;
@@ -429,7 +429,6 @@ div > div > a.step:active {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: top;
   flex-wrap: nowrap;
 }
 
